added new images and text

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Parallax</title>
   <link rel="shortcut icon" type="image/x-icon" href="img/fav.ico">
-  <link href="https://fonts.googleapis.com/css?family=Qwigley" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Qwigley" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css?family=Tillana" rel="stylesheet">
   <link rel="stylesheet" href="css/custom.css">
 </head>
 
@@ -22,90 +23,83 @@
     <div id="myNav" class="overlay" style="width: 0%;">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
       <div class="overlay-content">
-        <div class="menu-menu-1-container">
-          <ul class="overlay-content">
-            <li>
-              <a href="./index.html">Home</a>
-            </li>
-            <li>
-              <a href="#bucketlist">Bucketlist</a>
-            </li>
-            <li>
-              <a href="./movie.html">Movies I like</a>
-            </li>
-            <li>
-              <a href="./post.html">Blog</a>
-            </li>
-            <li>
-              <a href="./about.html">About me</a>
-            </li>
-            <li>
-              <a href="./contact.html">Contact</a>
-            </li>
-          </ul>
-        </div>
+        <img src="img/profile.jpg" alt="" class="profile">
+        <h2>Front end developer</h2>
+        <h2>Technologies known</h2>
+        <ul>
+          <li>HTML 5</li>
+          <li>CSS 3</li>
+          <li>SASS</li>
+          <li>React Native</li>
+        </ul>
       </div>
     </div>
   </section>
 
   <!-- menu section ends here -->
-  <div class="parallax-first parallax"></div>
-  <div class="content">
-    <h1>Its in the dark and solitude I find peace and feel alive , because in the light I can see masks ,people don't exist anymore..</h1>
-  </div>
 
-  <!-- parallax first section ends here -->
-  <div class="parallax-second parallax"></div>
-  <div class="content">
-    <h1>I think of getting lost every single second I am living, I am tired of living a routine life, I just want to live an
-      unplanned, unthinkable, unaware and unique life.</h1>
-  </div>
-  <!-- parallax second section ends here -->
-  <div class="parallax-third parallax"></div>
-  <div class="content">
-    <h1>I miss my childhood, It used to be watching this awesome creature eating pieces of rice from the ground and to return
-      the favor they will sing, But now gone are they and gone is the childhood.</h1>
-  </div>
-  <!-- parallax third section ends here -->
-  <div class="parallax-fourth parallax"></div>
-  <div class="content">
-    <h1>Magic does happen all we need is the vision and perspective to feel and sense the same.</h1>
-  </div>
-  <!-- parallax fourth section ends here -->
-  <div class="parallax-fifth parallax"></div>
-  <div class="content">
-    <h1>Its hard to forget, but the best thing is you have to trust time and everything becomes past with it.</h1>
-  </div>
-  <!-- parallax fifth section ends here -->
-  <div class="parallax-sixth parallax"></div>
-  <div class="content">
-    <h1>It's ironic how two souls which couldn't tolerate an hour without each other are separated for years now. This is for
-      you </h1>
-  </div>
-  <!-- parallax sixth section ends here -->
-  <div class="parallax-seventh parallax"></div>
-  <div class="content">
-    <h1>You know the best thing about rain, it brings life to a pause, and for that particular moment you can feel as if time
-      has stopped . So the next time it rains, feel it , feel the aroma, feel the breeze , feel the drops and then and there
-      you will feel the most amazing thing you should be thankful for called LIFE</h1>
-  </div>
-  <!-- parallax seventh section ends here -->
-  <div class="parallax-eight parallax"></div>
-  <div class="content">
-    <h1>I like cities, it makes me compete and be busy so that I can both survive and not be alone. But there is a moment every
-      other week or month which says , I cant take it anymore and then I look for peace.</h1>
-  </div>
-  <!-- parallax eight section ends here -->
-  <div class="parallax-nine parallax"></div>
-  <div class="content">
-    <h1>My life has always been a blank canvas , nothing is there which I can cherish or tell others, I didn't wanted it to be
-      like this, I wanted it to be colorful, there are more colors to life , all i want is to paint my canvas till everything
-      goes black.</h1>
-  </div>
-  <!-- parallax nine section ends here -->
+  <section class="parallax-box">
+    <div class="parallax-first parallax"></div>
+    <div class="content">
+      <h4>Its in the dark and solitude I find peace and feel alive , because in the light I can see masks ,people don't exist
+        anymore..</h4>
+    </div>
+
+    <!-- parallax first section ends here -->
+    <div class="parallax-second parallax"></div>
+    <div class="content">
+      <h4>I think of getting lost every single second I am living, I am tired of living a routine life, I just want to live an
+        unplanned, unthinkable, unaware and unique life.</h4>
+    </div>
+    <!-- parallax second section ends here -->
+    <div class="parallax-third parallax"></div>
+    <div class="content">
+      <h4>Sometimes I miss my childhood</h4>
+    </div>
+    <!-- parallax third section ends here -->
+    <div class="parallax-fourth parallax"></div>
+    <div class="content">
+      <h4>Magic does happen all we need is the vision and perspective to feel and sense the same.</h4>
+    </div>
+    <!-- parallax fourth section ends here -->
+    <div class="parallax-fifth parallax"></div>
+    <div class="content">
+      <h4>Its hard to forget, but the best thing is you have to trust time and everything becomes past with it.</h4>
+    </div>
+    <!-- parallax fifth section ends here -->
+    <div class="parallax-sixth parallax"></div>
+    <div class="content">
+      <h4>It's ironic how two souls which couldn't tolerate an hour without each other are separated for years now. This is for
+        you
+      </h4>
+    </div>
+    <!-- parallax sixth section ends here -->
+    <div class="parallax-seventh parallax"></div>
+    <div class="content">
+      <h4>You know the best thing about rain, it brings life to a pause, and for that particular moment you can feel as if time
+        has stopped . So the next time it rains, feel it , feel the aroma, feel the breeze , feel the drops and then and
+        there you will feel the most amazing thing you should be thankful for called LIFE</h4>
+    </div>
+    <!-- parallax seventh section ends here -->
+    <div class="parallax-eight parallax"></div>
+    <div class="content">
+      <h4>I like cities, it makes me compete and be busy so that I can both survive and not be alone. But there is a moment every
+        other week or month which says , I cant take it anymore and then I look for peace.</h4>
+    </div>
+    <!-- parallax eight section ends here -->
+    <div class="parallax-nine parallax"></div>
+    <div class="content">
+      <h4>My life has always been a blank canvas , nothing is there which I can cherish or tell others, I didn't wanted it to
+        be like this, I wanted it to be colorful, there are more colors to life , all i want is to paint my canvas till everything
+        goes black.</h4>
+    </div>
+    <!-- parallax nine section ends here -->
+  </section>
+
+
   <section class="bucketlist " id="bucketlist">
     <div class="container">
-      <h1 class="title">Bucketlist</h1>
+      <h4 class="title">Bucketlist</h4>
       <ol>
         <li class="list">
           <a href="">Running a Marathon</a>
@@ -128,7 +122,7 @@
 
   <section class="quotes">
     <div class="container">
-      <h1 class="title"> Quotes</h1>
+      <h4 class="title"> Quotes</h4>
       <div class="prose">
         <p>
           <span>"</span>Silent gratitude isn't much use to anyone.
@@ -139,7 +133,8 @@
           <span>"</span>
         </p>
         <p>
-          <span>"</span>He was wild the way a mistreated dog becomes wild, not because it loves freedom, but because it has lost trust.
+          <span>"</span>He was wild the way a mistreated dog becomes wild, not because it loves freedom, but because it has lost
+          trust.
           <span>"</span>
         </p>
         <p>
@@ -152,7 +147,7 @@
 
   <footer>
     <div class="info">
-         Sudhir Kumar
+      Sudhir Kumar
     </div>
     <div class="links">
       <a href="mailto:sudhirkumarojhaa@gmail.com?Subject=Hello%20again" target="_top">
