added new images and text

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Parallax</title>
   <link rel="shortcut icon" type="image/x-icon" href="img/fav.ico">
-  <!-- <link href="https://fonts.googleapis.com/css?family=Qwigley" rel="stylesheet"> -->
-  <link href="https://fonts.googleapis.com/css?family=Tillana" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Qwigley" rel="stylesheet">
   <link rel="stylesheet" href="css/custom.css">
 </head>
 
