--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <div id="overlay">
   <div class="typewriter">
-    <h3>We will meet in parallel universe ...</h3>
+    <h3>We will meet in Parallel Universe</h3>
   </div>
 </div>
 
@@ -52,8 +52,7 @@
   <section class="parallax-box">
     <div class="parallax-first parallax"></div>
     <div class="content">
-      <h4>Its in the dark and solitude I find peace and feel alive , because in the light I can see masks ,people don't exist
-        anymore..
+      <h4>Its in the dark and solitude I find peace and feel alive , because in the light I can see masks ,people don't exist anymore..
       </h4>
     </div>
 
@@ -150,24 +149,10 @@
           <span>"</span>
         </p>
         <p>
-          <span>"</span>Even if the tiger is hungry,it wont eat grass.
+          <span>"</span>Even if the tiger is hungry,it will eat grass.
           <span>"</span>
         </p>
       </div>
-    </div>
-  </section>
-
-  <section>
-
-    <div class="well animated rotateInDownRight" style="height: 300px; background: rgb(52, 73, 94); opacity: 1;" data-sb="zenFadeInUp,zenFadeInRight,zenFadeInLeft,zenFadeInUpBig,zenFadeInRightBig,zenFadeInLeftBig"
-      data-sb-hide="fadeOutUp"></div>
-    <div class="well animated rotateInDownLeft" " style="height: 300px; background: rgb(22, 160, 133); opacity: 1;
-      " data-sb="zenFadeInUp,zenFadeInRight,zenFadeInLeft,zenFadeInUpBig,zenFadeInRightBig,zenFadeInLeftBig "
-      data-sb-hide="fadeOutUp "></div>
-    <div class="well animated zenFadeInLeftBig "" style="height: 300px; background: rgb(52, 73, 94); opacity: 1;" data-sb="zenFadeInUp,zenFadeInRight,zenFadeInLeft,zenFadeInUpBig,zenFadeInRightBig,zenFadeInLeftBig"
-      data-sb-hide="fadeOutUp"></div>
-    <div class="well sb-effect-displayed animated zenFadeInLeft" style="height: 300px; background: rgb(39, 174, 96); opacity: 1;"
-      data-sb="zenFadeInUp,zenFadeInRight,zenFadeInLeft,zenFadeInUpBig,zenFadeInRightBig,zenFadeInLeftBig" data-sb-hide="fadeOutUp"></div>
     </div>
   </section>
 
