styling added and enhanced

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Parallax</title>
   <link rel="shortcut icon" type="image/x-icon" href="img/fav.ico">
-
   <link href="css/animate.css" rel="stylesheet" type="text/css">
-
   <link href="css/story.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Qwigley" rel="stylesheet">
   <link rel="stylesheet" href="css/custom.css">
@@ -34,15 +32,11 @@
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
       <div class="overlay-content">
         <img src="img/profile.jpg" alt="" class="profile">
-        <h3 class="designation">Front-
-          <span class="rotate">End</span> Developer</h3>
-        <h4>Technologies known</h4>
-        <ul>
-          <li>HTML 5</li>
-          <li>CSS 3</li>
-          <li>SASS</li>
-          <li>React Native</li>
-        </ul>
+        <h3 class="designation">Front-End Developer</h3>
+        <div class="btn">HTML</div>
+        <div class="btn">CSS</div>
+        <div class="btn">JavaScript</div>
+        <div class="btn">React-Native</div>
       </div>
     </div>
   </section>
