added css and animation

--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
 </head>
 
 <div id="overlay">
-  <div class="typewriter">
-    <h3>We will meet in Parallel Universe</h3>
+  <div class="splashscreen">
+    <h1>para</h1>
+    <div class="line1"></div>
+    <div class="line2"></div>
+    <h1 class="space">el</h1>
+    <h1 class="space">Universe</h1>
   </div>
 </div>
 
