--- a/index.html
+++ b/index.html
@@ -24,25 +24,9 @@
 
 <body>
 
-  <section class="menu">
-    <div class="brand">
-      <a href="./index.html">
-        <img src="img/fav.ico" alt="" class="menu-logo">
-      </a>
-    </div>
-    <img onclick="openNav()" src="img/gift.png" alt="" class="menu-logo">
-    <div id="myNav" class="overlay" style="width: 0%;">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-      <div class="overlay-content">
-        <img src="img/profile.jpg" alt="" class="profile">
-        <h3 class="designation">Front-End Developer</h3>
-        <div class="btn">HTML</div>
-        <div class="btn">CSS</div>
-        <div class="btn">JavaScript</div>
-        <div class="btn">React-Native</div>
-      </div>
-    </div>
-  </section>
+  <header>
+    <h2>parallax</h2>
+  </header>
 
   <!-- menu section ends here -->
 
