added effects in css

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 
   <header>
-    <h2>parallax</h2>
+    <h2>Parallax Diary</h2>
   </header>
 
   <!-- menu section ends here -->
@@ -33,57 +33,57 @@
   <section class="parallax-box">
     <div class="parallax-first parallax"></div>
     <div class="content">
-      <h4>Its in the dark and solitude I find peace and feel alive , because in the light I can see masks ,people don't exist anymore..
-      </h4>
+      <h3>Its in the dark and solitude I find peace and feel alive , because in the light I can see masks ,people don't exist anymore..
+      </h3>
     </div>
 
     <!-- parallax first section ends here -->
     <div class="parallax-second parallax"></div>
     <div class="content">
-      <h4>I think of getting lost every single second I am living, I am tired of living a routine life, I just want to live an
-        unplanned, unthinkable, unaware and unique life.</h4>
+      <h3>I think of getting lost every single second I am living, I am tired of living a routine life, I just want to live an
+        unplanned, unthinkable, unaware and unique life.</h3>
     </div>
     <!-- parallax second section ends here -->
     <div class="parallax-third parallax"></div>
     <div class="content">
-      <h4>Sometimes I miss my childhood</h4>
+      <h3>Sometimes I miss my childhood</h3>
     </div>
     <!-- parallax third section ends here -->
     <div class="parallax-fourth parallax"></div>
     <div class="content">
-      <h4>Magic does happen all we need is the vision and perspective to feel and sense the same.</h4>
+      <h3>Magic does happen all we need is the vision and perspective to feel and sense the same.</h3>
     </div>
     <!-- parallax fourth section ends here -->
     <div class="parallax-fifth parallax"></div>
     <div class="content">
-      <h4>Its hard to forget, but the best thing is you have to trust time and everything becomes past with it.</h4>
+      <h3>Its hard to forget, but the best thing is you have to trust time and everything becomes past with it.</h3>
     </div>
     <!-- parallax fifth section ends here -->
     <div class="parallax-sixth parallax"></div>
     <div class="content">
-      <h4>It's ironic how two souls which couldn't tolerate an hour without each other are separated for years now. This is for
+      <h3>It's ironic how two souls which couldn't tolerate an hour without each other are separated for years now. This is for
         you
-      </h4>
+      </h3>
     </div>
     <!-- parallax sixth section ends here -->
     <div class="parallax-seventh parallax"></div>
     <div class="content">
-      <h4>You know the best thing about rain, it brings life to a pause, and for that particular moment you can feel as if time
+      <h3>You know the best thing about rain, it brings life to a pause, and for that particular moment you can feel as if time
         has stopped . So the next time it rains, feel it , feel the aroma, feel the breeze , feel the drops and then and
-        there you will feel the most amazing thing you should be thankful for called LIFE</h4>
+        there you will feel the most amazing thing you should be thankful for called LIFE</h3>
     </div>
     <!-- parallax seventh section ends here -->
     <div class="parallax-eight parallax"></div>
     <div class="content">
-      <h4>I like cities, it makes me compete and be busy so that I can both survive and not be alone. But there is a moment every
-        other week or month which says , I cant take it anymore and then I look for peace.</h4>
+      <h3>I like cities, it makes me compete and be busy so that I can both survive and not be alone. But there is a moment every
+        other week or month which says , I cant take it anymore and then I look for peace.</h3>
     </div>
     <!-- parallax eight section ends here -->
     <div class="parallax-nine parallax"></div>
     <div class="content">
-      <h4>My life has always been a blank canvas , nothing is there which I can cherish or tell others, I didn't wanted it to
+      <h3>My life has always been a blank canvas , nothing is there which I can cherish or tell others, I didn't wanted it to
         be like this, I wanted it to be colorful, there are more colors to life , all i want is to paint my canvas till everything
-        goes black.</h4>
+        goes black.</h3>
     </div>
     <!-- parallax nine section ends here -->
   </section>
@@ -91,7 +91,7 @@
 
   <section class="bucketlist " id="bucketlist">
     <div class="container">
-      <h4 class="title">Bucketlist</h4>
+      <h3 class="title">Bucketlist</h3>
       <ol>
         <li class="list">
           <a href="">Running a Marathon</a>
@@ -114,7 +114,7 @@
 
   <section class="quotes">
     <div class="container">
-      <h4 class="title"> Quotes</h4>
+      <h3 class="title"> Quotes</h3>
       <div class="prose">
         <p>
           <span>"</span>Silent gratitude isn't much use to anyone.
